syntax = "proto3";

package warehouse.v1;

option go_package = "warehouse/proto/updatestockcountforwarehouselocationpb;updatestockcountforwarehouselocationpb";

service Warehouse {
    rpc UpdateStockcountForWarehouselocation(StockCountUpdateRequest) returns (StockCountUpdateResponse);
}

message StockCountUpdateRequest {
   int64 warehouseLocationId = 1;
   int64 warehouseId = 2;
   map<string, int64> stockCount = 3;
}

message StockCountUpdateResponse {
    bool updated = 1;
}